0.12.0.dev/_sources/reference/dipy.direction.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`direction`
================
.. automodule:: dipy.direction

.. currentmodule:: dipy.direction
.. autosummary::

   DeterministicMaximumDirectionGetter
   HemiSphere
   InTemporaryDirectory
   PeaksAndMetrics
   PeaksAndMetricsDirectionGetter
   ProbabilisticDirectionGetter
   Sphere
   repeat
   xrange
   Pool
   cpu_count
   gfa
   local_maxima
   ndindex
   peak_directions
   peak_directions_nl
   peaks_from_model
   remove_similar_vertices
   reshape_peaks_for_visualization
   search_descending
   sh_to_sf_matrix
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`direction.peaks`
------------------------------
.. automodule:: dipy.direction.peaks

.. currentmodule:: dipy.direction.peaks
.. autosummary::

   HemiSphere
   InTemporaryDirectory
   PeaksAndMetrics
   PeaksAndMetricsDirectionGetter
   Sphere
   repeat
   xrange
   Pool
   cpu_count
   gfa
   local_maxima
   ndindex
   peak_directions
   peak_directions_nl
   peaks_from_model
   remove_similar_vertices
   reshape_peaks_for_visualization
   search_descending
   sh_to_sf_matrix
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`direction.probabilistic_direction_getter`
-------------------------------------------------------
.. automodule:: dipy.direction.probabilistic_direction_getter

.. currentmodule:: dipy.direction.probabilistic_direction_getter
.. autosummary::

   DeterministicMaximumDirectionGetter
   DirectionGetter
   PeakDirectionGetter
   PmfGen
   ProbabilisticDirectionGetter
   SHCoeffPmfGen
   SimplePmfGen
   order_from_ncoef
   peak_directions
   trilinear_interpolate4d


.. currentmodule:: dipy.direction


:class:`DeterministicMaximumDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DeterministicMaximumDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`HemiSphere`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: HemiSphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`InTemporaryDirectory`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: InTemporaryDirectory
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetrics`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetrics
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetricsDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetricsDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ProbabilisticDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ProbabilisticDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Sphere`
~~~~~~~~~~~~~~~


.. autoclass:: Sphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`repeat`
~~~~~~~~~~~~~~~


.. autoclass:: repeat
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`xrange`
~~~~~~~~~~~~~~~


.. autoclass:: xrange
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

Pool
~~~~

.. autofunction:: Pool

cpu_count
~~~~~~~~~

.. autofunction:: cpu_count

gfa
~~~

.. autofunction:: gfa

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

ndindex
~~~~~~~

.. autofunction:: ndindex

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions

peak_directions_nl
~~~~~~~~~~~~~~~~~~

.. autofunction:: peak_directions_nl

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

remove_similar_vertices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_similar_vertices

reshape_peaks_for_visualization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: reshape_peaks_for_visualization

search_descending
~~~~~~~~~~~~~~~~~

.. autofunction:: search_descending

sh_to_sf_matrix
~~~~~~~~~~~~~~~

.. autofunction:: sh_to_sf_matrix

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.direction.peaks


:class:`HemiSphere`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: HemiSphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`InTemporaryDirectory`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: InTemporaryDirectory
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetrics`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetrics
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetricsDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetricsDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Sphere`
~~~~~~~~~~~~~~~


.. autoclass:: Sphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`repeat`
~~~~~~~~~~~~~~~


.. autoclass:: repeat
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`xrange`
~~~~~~~~~~~~~~~


.. autoclass:: xrange
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

Pool
~~~~

.. autofunction:: Pool

cpu_count
~~~~~~~~~

.. autofunction:: cpu_count

gfa
~~~

.. autofunction:: gfa

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

ndindex
~~~~~~~

.. autofunction:: ndindex

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions

peak_directions_nl
~~~~~~~~~~~~~~~~~~

.. autofunction:: peak_directions_nl

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

remove_similar_vertices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_similar_vertices

reshape_peaks_for_visualization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: reshape_peaks_for_visualization

search_descending
~~~~~~~~~~~~~~~~~

.. autofunction:: search_descending

sh_to_sf_matrix
~~~~~~~~~~~~~~~

.. autofunction:: sh_to_sf_matrix

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.direction.probabilistic_direction_getter


:class:`DeterministicMaximumDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DeterministicMaximumDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeakDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeakDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PmfGen`
~~~~~~~~~~~~~~~


.. autoclass:: PmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ProbabilisticDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ProbabilisticDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SHCoeffPmfGen`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SHCoeffPmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SimplePmfGen`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SimplePmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

order_from_ncoef
~~~~~~~~~~~~~~~~

.. autofunction:: order_from_ncoef

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions

trilinear_interpolate4d
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: trilinear_interpolate4d

