1.5.0/_sources/reference/dipy.direction.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`direction`
================
.. automodule:: dipy.direction

.. currentmodule:: dipy.direction
.. autosummary::

   BootDirectionGetter
   ClosestPeakDirectionGetter
   DeterministicMaximumDirectionGetter
   EuDXDirectionGetter
   InTemporaryDirectory
   PeaksAndMetrics
   ProbabilisticDirectionGetter
   Sphere
   repeat
   Pool
   deprecated_params
   determine_num_processes
   gfa
   local_maxima
   ndindex
   peak_directions
   peak_directions_nl
   peaks_from_model
   remove_similar_vertices
   reshape_peaks_for_visualization
   search_descending
   sh_to_sf_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`direction.bootstrap_direction_getter`
---------------------------------------------------
.. automodule:: dipy.direction.bootstrap_direction_getter

.. currentmodule:: dipy.direction.bootstrap_direction_getter
.. autosummary::

   BootDirectionGetter
   BootPmfGen

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`direction.closest_peak_direction_getter`
------------------------------------------------------
.. automodule:: dipy.direction.closest_peak_direction_getter

.. currentmodule:: dipy.direction.closest_peak_direction_getter
.. autosummary::

   BaseDirectionGetter
   BasePmfDirectionGetter
   ClosestPeakDirectionGetter
   PmfGenDirectionGetter
   peak_directions

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`direction.peaks`
------------------------------
.. automodule:: dipy.direction.peaks

.. currentmodule:: dipy.direction.peaks
.. autosummary::

   EuDXDirectionGetter
   InTemporaryDirectory
   PeaksAndMetrics
   Sphere
   repeat
   Pool
   deprecated_params
   determine_num_processes
   gfa
   local_maxima
   ndindex
   peak_directions
   peak_directions_nl
   peaks_from_model
   remove_similar_vertices
   reshape_peaks_for_visualization
   search_descending
   sh_to_sf_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`direction.pmf`
----------------------------
.. automodule:: dipy.direction.pmf

.. currentmodule:: dipy.direction.pmf
.. autosummary::

   BootPmfGen
   PmfGen
   SHCoeffPmfGen
   SimplePmfGen
   cart2sphere

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`direction.probabilistic_direction_getter`
-------------------------------------------------------
.. automodule:: dipy.direction.probabilistic_direction_getter

.. currentmodule:: dipy.direction.probabilistic_direction_getter
.. autosummary::

   DeterministicMaximumDirectionGetter
   ProbabilisticDirectionGetter
   peak_directions
   random


.. currentmodule:: dipy.direction


:class:`BootDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BootDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClosestPeakDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClosestPeakDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DeterministicMaximumDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DeterministicMaximumDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`EuDXDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EuDXDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`InTemporaryDirectory`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: InTemporaryDirectory
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetrics`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetrics
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ProbabilisticDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ProbabilisticDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Sphere`
~~~~~~~~~~~~~~~


.. autoclass:: Sphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`repeat`
~~~~~~~~~~~~~~~


.. autoclass:: repeat
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

Pool
~~~~

.. autofunction:: Pool

deprecated_params
~~~~~~~~~~~~~~~~~

.. autofunction:: deprecated_params

determine_num_processes
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: determine_num_processes

gfa
~~~

.. autofunction:: gfa

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

ndindex
~~~~~~~

.. autofunction:: ndindex

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions

peak_directions_nl
~~~~~~~~~~~~~~~~~~

.. autofunction:: peak_directions_nl

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

remove_similar_vertices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_similar_vertices

reshape_peaks_for_visualization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: reshape_peaks_for_visualization

search_descending
~~~~~~~~~~~~~~~~~

.. autofunction:: search_descending

sh_to_sf_matrix
~~~~~~~~~~~~~~~

.. autofunction:: sh_to_sf_matrix


.. currentmodule:: dipy.direction.bootstrap_direction_getter


:class:`BootDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BootDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`BootPmfGen`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: BootPmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.direction.closest_peak_direction_getter


:class:`BaseDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BaseDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`BasePmfDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BasePmfDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClosestPeakDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClosestPeakDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PmfGenDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PmfGenDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions


.. currentmodule:: dipy.direction.peaks


:class:`EuDXDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EuDXDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`InTemporaryDirectory`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: InTemporaryDirectory
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetrics`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetrics
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Sphere`
~~~~~~~~~~~~~~~


.. autoclass:: Sphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`repeat`
~~~~~~~~~~~~~~~


.. autoclass:: repeat
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

Pool
~~~~

.. autofunction:: Pool

deprecated_params
~~~~~~~~~~~~~~~~~

.. autofunction:: deprecated_params

determine_num_processes
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: determine_num_processes

gfa
~~~

.. autofunction:: gfa

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

ndindex
~~~~~~~

.. autofunction:: ndindex

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions

peak_directions_nl
~~~~~~~~~~~~~~~~~~

.. autofunction:: peak_directions_nl

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

remove_similar_vertices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_similar_vertices

reshape_peaks_for_visualization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: reshape_peaks_for_visualization

search_descending
~~~~~~~~~~~~~~~~~

.. autofunction:: search_descending

sh_to_sf_matrix
~~~~~~~~~~~~~~~

.. autofunction:: sh_to_sf_matrix


.. currentmodule:: dipy.direction.pmf


:class:`BootPmfGen`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: BootPmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PmfGen`
~~~~~~~~~~~~~~~


.. autoclass:: PmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SHCoeffPmfGen`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SHCoeffPmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SimplePmfGen`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SimplePmfGen
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

cart2sphere
~~~~~~~~~~~

.. autofunction:: cart2sphere


.. currentmodule:: dipy.direction.probabilistic_direction_getter


:class:`DeterministicMaximumDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DeterministicMaximumDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ProbabilisticDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ProbabilisticDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions

random
~~~~~~

.. autofunction:: random

